Add support for loading OpenSlide images from a server.
Additional minor and major changes.